Added banana coloring
ALso made some text better (or worse)

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+
+        <h1>MY Recipes</h1>
         <ul>
             <li><a href="recipes/pesto.html">Pesto Pasta</a></li>
             <li><a href="recipes/roni.html">Pasta Roni</a></li>
         </ul>
+        <h2 id="big">THE LETTERS ARE VERY BIG BECAUSE THERE AREN'T MANY RECIPES!</h2>
+        <h3>and also so people with bad vision can see them :)</h3>
         
     </body>
 </html>
